# quickjs

./: .envrc  .gitignore  .gitmodules  flake.nix  module.c  pyproject.toml  setup.py  test_quickjs.py
