[project]
name = "quickjs"
version = "1.19.4"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Enno Richter", email = "enno@nerdworks.de" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
quickjs = "quickjs:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
